--- a/jobs4u.util.ci/pom.xml
+++ b/jobs4u.util.ci/pom.xml
@@ -45,7 +45,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
                 <configuration>
-                    <argLine>${argLine} -Xms256m -Xmx2048m</argLine>
+                    <argLine>@{argLine} -Xms256m -Xmx2048m</argLine>
                     <forkCount>1</forkCount>
                     <runOrder>random</runOrder>
                 </configuration>
