--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
 				<artifactId>maven-surefire-report-plugin</artifactId>
 				<version>3.0.0</version>
 				<configuration>
-					<testFailureIgnore>true</testFailureIgnore>
+<!--					<testFailureIgnore>true</testFailureIgnore>-->
 					<aggregate>true</aggregate>
 				</configuration>
 				<executions>
