--- a/jobs4u.app2/pom.xml
+++ b/jobs4u.app2/pom.xml
@@ -21,5 +21,12 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>antlr</groupId>
+            <artifactId>antlr</artifactId>
+            <version>2.7.7</version>
+        </dependency>
+
     </dependencies>
 </project>
