--- a/jobs4u.util.ci/pom.xml
+++ b/jobs4u.util.ci/pom.xml
@@ -34,6 +34,13 @@
             <groupId>lapr4</groupId>
             <artifactId>jobs4u.app2</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>antlr</groupId>
+            <artifactId>antlr</artifactId>
+            <version>2.7.7</version>
+        </dependency>
+
     </dependencies>
 
     <build>
