--- a/jobs4u.infrastructure.application/src/main/resources/application.properties.sample
+++ b/jobs4u.infrastructure.application/src/main/resources/application.properties.sample
@@ -4,10 +4,10 @@
 ##
 #####################################################
 
-persistence.persistenceUnit=eapli.eCafeteriaPU
+persistence.persistenceUnit=jobs4u.base
 
-#persistence.repositoryFactory=eapli.ecafeteria.persistence.jpa.JpaRepositoryFactory
-persistence.repositoryFactory=eapli.ecafeteria.persistence.inmemory.InMemoryRepositoryFactory
+persistence.repositoryFactory=jobs4u.base.persistence.jpa.JpaRepositoryFactory
+#persistence.repositoryFactory=eapli.ecafeteria.persistence.inmemory.InMemoryRepositoryFactory
 
 ui.menu.layout=horizontal
 
