--- a/pom.xml
+++ b/pom.xml
@@ -16,15 +16,11 @@
 		<eapli.framework.authz.version>v24.0.1_RELEASE</eapli.framework.authz.version>
 		<eapli.framework.pubsub.version>v24.0.1_RELEASE</eapli.framework.pubsub.version>
 
-		<eapli.framework.core.version-snapshot>25.0.0</eapli.framework.core.version-snapshot>
-		<eapli.framework.authz.version-snapshot>21.0.0</eapli.framework.authz.version-snapshot>
-		<eapli.framework.pubsub.version-snapshot>22.0.0</eapli.framework.pubsub.version-snapshot>
-
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 
 		<sonar.jacoco.reportPaths>target/jacoco.exec</sonar.jacoco.reportPaths>
 		<sonar.exclusions>src/main/java/**/*/package-info.java</sonar.exclusions>
@@ -155,22 +151,22 @@
 				</executions>
 			</plugin>
 
-<!--			&lt;!&ndash; lombok &ndash;&gt;-->
-<!--			<plugin>-->
-<!--				<groupId>org.apache.maven.plugins</groupId>-->
-<!--				<artifactId>maven-compiler-plugin</artifactId>-->
-<!--				<version>3.8.1</version>-->
-<!--				<configuration>-->
-<!--					<release>11</release>-->
-<!--					<annotationProcessorPaths>-->
-<!--						<path>-->
-<!--							<groupId>org.projectlombok</groupId>-->
-<!--							<artifactId>lombok</artifactId>-->
-<!--							<version>1.18.24</version>-->
-<!--						</path>-->
-<!--					</annotationProcessorPaths>-->
-<!--				</configuration>-->
-<!--			</plugin>-->
+			<!-- lombok -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<release>11</release>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.24</version>
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
 
 			<plugin>
 				<groupId>org.projectlombok</groupId>
