--- a/docs/sb_us_2003/requirements-template.txt
+++ b/docs/sb_us_2003/requirements-template.txt
@@ -1,7 +1,41 @@
 REQUIREMENT #1
-[Single Choice] "Do you know Java?"
-1) "Yes"
-2) "No"
+[Single Choice] "Do you prefer using React or Angular for front-end development?"
+1) "React"
+2) "Angular"
+ANSWER "React"
 
 REQUIREMENT #2
-[Whole Number] "How many years of work experience do you have?"
+[Multiple Choice] "Which of the following are front-end technologies?"
+1) "HTML"
+2) "Python"
+3) "CSS"
+ANSWER "HTML"
+ANSWER "CSS"
+
+REQUIREMENT #3
+[Whole Number] "How many years have you been working with JavaScript?"
+ANSWER "More than 3"
+
+REQUIREMENT #4
+[True/False] "Are you familiar with responsive web design?"
+ANSWER "True"
+
+REQUIREMENT #5
+[Numeric Scale] "Rate your proficiency in CSS with the given scale." [1-5]
+ANSWER "More than 2"
+
+REQUIREMENT #6
+[Decimal Number] "What is the pixel width of a standard Bootstrap container?"
+ANSWER "1140.5"
+
+REQUIREMENT #7
+[Short Answer] "Name a popular CSS preprocessor."
+ANSWER "Sass"
+
+REQUIREMENT #8
+[Date] "When did you start learning web development?" [DD/MM/YYYY]
+ANSWER "before 01/01/2022"
+
+REQUIREMENT #9
+[Time] "At what time do you usually start coding?" [HH:MM]
+ANSWER "before 10:30"
