refactor: updates UI related classes standardizing the user interface across all applications. [closes #106]

--- a/jobs4u.app.backoffice.console/src/main/resources/application.properties
+++ b/jobs4u.app.backoffice.console/src/main/resources/application.properties
@@ -6,6 +6,6 @@
 
 persistence.repositoryFactory=jobs4u.base.persistence.impl.jpa.JpaRepositoryFactory
 #persistence.repositoryFactory=jobs4u.base.persistence.impl.inmemory.InMemoryRepositoryFactory
-ui.menu.layout=horizontal
+ui.menu.layout=vertical
 persistence.persistenceUnit=jobs4u.base
 HighCaloriesDishLimit=300
