--- a/docs/sb_us_2003/requirements-template.txt
+++ b/docs/sb_us_2003/requirements-template.txt
@@ -1,41 +1,40 @@
 REQUIREMENT #1
-[Single Choice] "Do you prefer using React or Angular for front-end development?"
+[Single Choice] "Do you prefer using React or Angular for front-end development?" Answer Model: "[Choice]"
 1) "React"
 2) "Angular"
-ANSWER "React"
+R:. React
 
 REQUIREMENT #2
-[Multiple Choice] "Which of the following are front-end technologies?"
+[Multiple Choice] "Which of the following are front-end technologies?" Answer Model: "[CHOICE] and [CHOICE]"
 1) "HTML"
 2) "Python"
 3) "CSS"
-ANSWER "HTML"
-ANSWER "CSS"
+R:. HTML and CSS
 
 REQUIREMENT #3
 [Whole Number] "How many years have you been working with JavaScript?"
-ANSWER "More than 3"
+R:. 4
 
 REQUIREMENT #4
 [True/False] "Are you familiar with responsive web design?"
-ANSWER "True"
+R:. True
 
 REQUIREMENT #5
-[Numeric Scale] "Rate your proficiency in CSS with the given scale." [1-5]
-ANSWER "More than 2"
+[Numeric Scale] "Rate your proficiency in CSS with the given scale." Answer Model: [1-5]
+R:. 2
 
 REQUIREMENT #6
 [Decimal Number] "What is the pixel width of a standard Bootstrap container?"
-ANSWER "1140.5"
+R:. 1140.5
 
 REQUIREMENT #7
 [Short Answer] "Name a popular CSS preprocessor."
-ANSWER "Sass"
+R:. Sass
 
 REQUIREMENT #8
 [Date] "When did you start learning web development?" [DD/MM/YYYY]
-ANSWER "before 01/01/2022"
+R:. 01/01/2022
 
 REQUIREMENT #9
 [Time] "At what time do you usually start coding?" [HH:MM]
-ANSWER "before 10:30"
+R:. 10:30
