feat: updates classes related to register of customers. [#89]

--- a/jobs4u.core/src/main/resources/jobs4u.properties
+++ b/jobs4u.core/src/main/resources/jobs4u.properties
@@ -2,7 +2,7 @@
 # and open the template in the editor.
 
 persistence.persistenceUnit=jobs4u.base
-#persistence.repositoryFactory=jobs4u.base.persistence.jpa.JpaRepositoryFactory
-persistence.repositoryFactory=jobs4u.base.persistence.inmemory.InMemoryRepositoryFactory
+persistence.repositoryFactory=jobs4u.base.persistence.jpa.JpaRepositoryFactory
+#persistence.repositoryFactory=jobs4u.base.persistence.inmemory.InMemoryRepositoryFactory
 ui.menu.layout=horizontal
 HighCaloriesDishLimit=300
