--- a/scomp/us2001/makefile
+++ b/scomp/us2001/makefile
@@ -1,5 +1,5 @@
-us2001_prog: get_new_candidates.o delegate_work.o check_new_files.o main.o
-	gcc get_new_candidates.o delegate_work.o check_new_files.o main.o -z noexecstack -o us2001_prog
+us2001_prog: get_new_candidates.o delegate_work.o check_new_files.o copy_files.o main.o 
+	gcc get_new_candidates.o delegate_work.o check_new_files.o copy_files.o main.o -z noexecstack -o us2001_prog
 
 get_new_candidates.o: get_new_candidates.c
 	gcc -g -Wall -Wextra -fanalyzer -c get_new_candidates.c  -o get_new_candidates.o
@@ -7,6 +7,8 @@ get_new_candidates.o: get_new_candidates.c
 delegate_work.o: delegate_work.c
 	gcc -g -Wall -Wextra -fanalyzer -c delegate_work.c  -o delegate_work.o
 
+copy_files.o: copy_files.c
+	gcc -g -Wall -Wextra -fanalyzer -c copy_files.c  -o copy_files.o
 
 check_new_files.o: check_new_files.c
 	gcc -g -Wall -Wextra -fanalyzer -c check_new_files.c  -o check_new_files.o
@@ -14,8 +16,8 @@ check_new_files.o: check_new_files.c
 main.o: main.c fnc.h
 	gcc -g -Wall -Wextra -fanalyzer -c main.c  -o main.o
 
-run: us2001_prog
-	./us2001_prog
+run: us2001_prog 
+	./us2001_prog files output 2 5
 
 clean:
 	rm -f *.o us2001_prog
