feat: adds report generation and corrects some mistakes. [#41]

--- a/scomp/us2001/makefile
+++ b/scomp/us2001/makefile
@@ -1,5 +1,5 @@
-us2001_prog: get_new_candidates.o delegate_work.o check_new_files.o copy_files.o main.o 
-	gcc get_new_candidates.o delegate_work.o check_new_files.o copy_files.o main.o -z noexecstack -o us2001_prog
+prog: get_new_candidates.o delegate_work.o check_new_files.o copy_files.o generate_report.o  main.o 
+	gcc get_new_candidates.o delegate_work.o check_new_files.o copy_files.o generate_report.o  main.o -z noexecstack -o prog
 
 get_new_candidates.o: get_new_candidates.c
 	gcc -g -Wall -Wextra -fanalyzer -c get_new_candidates.c  -o get_new_candidates.o
@@ -13,11 +13,14 @@ copy_files.o: copy_files.c
 check_new_files.o: check_new_files.c
 	gcc -g -Wall -Wextra -fanalyzer -c check_new_files.c  -o check_new_files.o
 
+generate_report.o: generate_report.c
+	gcc -g -Wall -Wextra -fanalyzer -c generate_report.c  -o generate_report.o
+
 main.o: main.c fnc.h
 	gcc -g -Wall -Wextra -fanalyzer -c main.c  -o main.o
 
-run: us2001_prog 
-	./us2001_prog files output 2 5
+run: prog 
+	./prog files output 2 5
 
 clean:
-	rm -f *.o us2001_prog
+	rm -f *.o prog
