--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,8 @@
 		<module>jobs4u.bootstrap</module>
 		<module>jobs4u.app.candidate.console</module>
 		<module>jobs4u.app.customer.console</module>
-	</modules>
+        <module>jobs4u.plugins</module>
+    </modules>
 	<version>0.1.0</version>
 
 
