--- a/jobs4u.plugins/pom.xml
+++ b/jobs4u.plugins/pom.xml
@@ -9,8 +9,9 @@
         <version>0.1.0</version>
     </parent>
 
-    <groupId>org.example</groupId>
     <artifactId>jobs4u.plugins</artifactId>
+    <packaging>jar</packaging>
+    <name>jobs4u.plugins</name>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
