feat: updates implementation of application file bot. [#189]

--- a/scomp/sprintc/us2001b/makefile
+++ b/scomp/sprintc/us2001b/makefile
@@ -1,16 +1,13 @@
-prog: get_new_candidates.o delegate_work.o check_new_files.o copy_files.o generate_report.o  main.o 
-	gcc get_new_candidates.o delegate_work.o check_new_files.o copy_files.o generate_report.o  main.o -z noexecstack -o prog
+prog: get_new_candidates.o check_new_files.o copy_files.o generate_report.o  main.o 
+	gcc get_new_candidates.o check_new_files.o copy_files.o generate_report.o  main.o -z noexecstack -o prog
 
 get_new_candidates.o: get_new_candidates.c
 	gcc -g -Wall -Wextra -fanalyzer -c get_new_candidates.c  -o get_new_candidates.o
 
-delegate_work.o: delegate_work.c
-	gcc -g -Wall -Wextra -fanalyzer -c delegate_work.c  -o delegate_work.o
-
 copy_files.o: copy_files.c
 	gcc -g -Wall -Wextra -fanalyzer -c copy_files.c  -o copy_files.o
 
-check_new_files2.o: check_new_files.c
+check_new_files.o: check_new_files.c
 	gcc -g -Wall -Wextra -fanalyzer -c check_new_files.c  -o check_new_files.o
 
 generate_report.o: generate_report.c
